force-app/main/default/objects/Trip__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <formula>IF(ISBLANK($User.State), &quot;None&quot;,
IF(CONTAINS(&quot;AK:AZ:CA:HA:NV:NM:OR:UT:WA&quot;, $User.State), &quot;West&quot;,
IF(CONTAINS(&quot;CO:ID:MT:KS:OK:TX:WY&quot;, $User.State), &quot;Central&quot;,
IF(CONTAINS(&quot;CT:ME:MA:NH:NY:PA:RI:VT&quot;, $User.State), &quot;East&quot;,
IF(CONTAINS(&quot;AL:AR:DC:DE:FL:GA:KY:LA:MD:MS:NC:NJ:SC:TN:VA:WV&quot;,
$User.State), &quot;South&quot;,
IF(CONTAINS(&quot;IL:IN:IA:MI:MN:MO:NE:ND:OH:SD:WI&quot;, $User.State), &quot;North&quot;,
&quot;Other&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Zone</label>
    <type>Text</type>
</CustomField>