force-app/main/default/objects/Trip__c/fields/Total_Number_of_Participants_2__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Participants_2__c</fullName>
    <label>Total Number of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>