force-app/main/default/objects/Trip__c/fields/Total_Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Participants__c</fullName>
    <label>Total Number of Participants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>