force-app/main/default/objects/Trip__c/fields/Total_Number_of_Participants_Report__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Participants_Report__c</fullName>
    <label>Total Number of Participants Report</label>
    <summaryForeignKey>Guest__c.CEC_Visitation_Planner__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>