force-app/main/default/objects/Trip__c/fields/Trip_Location__c.field-meta.xml
<CustomField>
    <fullName>Trip_Location__c</fullName>
    <label>Trip Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Batesville</fullName>
            </value>
            <value>
                <fullName>Irvine</fullName>
            </value>
            <value>
                <fullName>Cary</fullName>
            </value>
            <value>
                <fullName>Charleston</fullName>
            </value>
            <value>
                <fullName>CWS Site</fullName>
            </value>
            <value>
                <fullName>Mississauga</fullName>
            </value>
            <value>
                <fullName>Pluvigner</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>