force-app/main/default/objects/Trip__c/fields/Trip_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Trip_Request_Status__c</fullName>
    <description>Indicates the Current Trip Request Status of the CEC Trip. Default Status is Submitted.</description>
    <inlineHelpText>Trip Request Status can only be updated to Confirmed or Cancelled by a CEC Specialist.</inlineHelpText>
    <label>Trip Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>CLOSED-CEC</fullName>
            </value>
            <value>
                <fullName>CLOSED-JAWACDAH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>