force-app/main/default/objects/Trip__c/fields/Trumpf2__c.field-meta.xml
<CustomField>
    <fullName>Trumpf2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Trumpf Employee</description>
    <inlineHelpText>Trumpf Employee</inlineHelpText>
    <label>Trumpf</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_PlannerbPwC</relationshipName>
    <type>Lookup</type>
</CustomField>