force-app/main/default/objects/Trip__c/fields/Trumpf__c.field-meta.xml
<CustomField>
    <fullName>Trumpf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trumpf Medical Products</description>
    <inlineHelpText>Trumpf Medical Products</inlineHelpText>
    <label>Trumpf</label>
    <type>Checkbox</type>
</CustomField>