force-app/main/default/objects/Trip__c/fields/Trumpf_ICU_ED_Booms__c.field-meta.xml
<CustomField>
    <fullName>Trumpf_ICU_ED_Booms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trumpf ICU / ED Booms</label>
    <type>Checkbox</type>
</CustomField>