force-app/main/default/objects/Trip__c/fields/Trumpf_OR_Booms__c.field-meta.xml
<CustomField>
    <fullName>Trumpf_OR_Booms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trumpf OR Booms</label>
    <type>Checkbox</type>
</CustomField>