force-app/main/default/objects/Trip__c/fields/Trumpf_Surgical_Tables__c.field-meta.xml
<CustomField>
    <fullName>Trumpf_Surgical_Tables__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trumpf Surgical Tables</label>
    <type>Checkbox</type>
</CustomField>