force-app/main/default/objects/Trip__c/fields/Vest__c.field-meta.xml
<CustomField>
    <fullName>Vest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vest (R)</description>
    <inlineHelpText>Vest (R)</inlineHelpText>
    <label>Respiratory</label>
    <type>Checkbox</type>
</CustomField>