force-app/main/default/objects/Trip__c/fields/WA__c.field-meta.xml
<CustomField>
    <fullName>WA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>WelchAllyn Employee</description>
    <inlineHelpText>WelchAllyn Employee</inlineHelpText>
    <label>WA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CEC_Visitation_Planner9</relationshipName>
    <type>Lookup</type>
</CustomField>