force-app/main/default/objects/Trip__c/fields/WatchCare__c.field-meta.xml
<CustomField>
    <fullName>WatchCare__c</fullName>
    <label>WatchCare</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WatchCare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>