force-app/main/default/objects/Trip__c/fields/WatchChild__c.field-meta.xml
<CustomField>
    <fullName>WatchChild__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WatchChild</label>
    <type>Checkbox</type>
</CustomField>