force-app/main/default/objects/Trip__c/fields/Welch_Allyn__c.field-meta.xml
<CustomField>
    <fullName>Welch_Allyn__c</fullName>
    <label>Welch Allyn</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Trip_Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Braun thermometry</fullName>
            </value>
            <value>
                <fullName>CCSS Central Station with etCO2</fullName>
            </value>
            <value>
                <fullName>CIWS</fullName>
            </value>
            <value>
                <fullName>Configure CSM with HEWS</fullName>
            </value>
            <value>
                <fullName>Configure CSM with MEWS</fullName>
            </value>
            <value>
                <fullName>Configure CSM with NEWS</fullName>
            </value>
            <value>
                <fullName>Configure CSM with PEWS</fullName>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
            <value>
                <fullName>CVSM</fullName>
            </value>
            <value>
                <fullName>CVSM with Early Sense</fullName>
            </value>
            <value>
                <fullName>CVSM with etCO2</fullName>
            </value>
            <value>
                <fullName>Disposable FlexiPort Cuffs</fullName>
            </value>
            <value>
                <fullName>Masimo Pulse Oximetry</fullName>
            </value>
            <value>
                <fullName>Nelcor (Covidien/Medtronic) Pulse Oximetry</fullName>
            </value>
            <value>
                <fullName>Reuseable Pediatric FlexiPort Cuff Sizes</fullName>
            </value>
            <value>
                <fullName>Reuseable Thigh FlexiPort Cuff Size</fullName>
            </value>
            <value>
                <fullName>Spot</fullName>
            </value>
            <value>
                <fullName>SureTemp thermometry</fullName>
            </value>
            <value>
                <fullName>Welch Allyn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>