force-app/main/default/objects/Trip__c/fields/WelchAllyn__c.field-meta.xml
<CustomField>
    <fullName>WelchAllyn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Welch Allyn Products</description>
    <inlineHelpText>Welch Allyn Products</inlineHelpText>
    <label>WelchAllyn</label>
    <type>Checkbox</type>
</CustomField>