force-app/main/default/objects/Trip__c/fields/Wireless_Integration__c.field-meta.xml
<CustomField>
    <fullName>Wireless_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wireless Integration</label>
    <type>Checkbox</type>
</CustomField>