force-app/main/default/objects/Trip__c/fields/Wound_Therapy__c.field-meta.xml
<CustomField>
    <fullName>Wound_Therapy__c</fullName>
    <label>Wound &amp; Therapy Surfaces</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Trip_Location__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>300 Wound Surface</fullName>
            </value>
            <value>
                <fullName>Accumax VPC Surface</fullName>
            </value>
            <value>
                <fullName>Clinitron Rite Hite</fullName>
                <isActive>false</isActive>
                <label>Clinitron Rite Hite</label>
            </value>
            <value>
                <fullName>Envella™ Air Fluidized</fullName>
            </value>
            <value>
                <fullName>Envision</fullName>
            </value>
            <value>
                <fullName>NP100 Prevention Surface</fullName>
            </value>
            <value>
                <fullName>NP50 Prevention Surface</fullName>
            </value>
            <value>
                <fullName>P500 Therapy Surface</fullName>
            </value>
            <value>
                <fullName>Pro+</fullName>
            </value>
            <value>
                <fullName>Synergy Air Elite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>