force-app/main/default/objects/Trip__c/recordTypes/CWS_Site_Visit.recordType-meta.xml
<RecordType>
    <fullName>CWS_Site_Visit</fullName>
    <active>true</active>
    <description>CWS Site to Site Visit Trip Request</description>
    <label>CWS Site Visit</label>
</RecordType>