force-app/main/default/objects/Trip__c/recordTypes/Non_Opportunity_based_Drive_In.recordType-meta.xml
<RecordType>
    <fullName>Non_Opportunity_based_Drive_In</fullName>
    <active>true</active>
    <description>CEC visit with no Sales Opportunity where Customer travels via their own ground transportation</description>
    <label>Non Opportunity based Drive In</label>
</RecordType>