force-app/main/default/objects/Trip__c/recordTypes/Non_Opportunity_based_Ground_Transport.recordType-meta.xml
<RecordType>
    <fullName>Non_Opportunity_based_Ground_Transport</fullName>
    <active>true</active>
    <description>CEC visit with no Sales Opportunity where ground transportation is provided</description>
    <label>Non Opportunity based Ground Transport</label>
</RecordType>