force-app/main/default/objects/Trip__c/recordTypes/Opportunity_Based_Drive_In.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Based_Drive_In</fullName>
    <active>true</active>
    <description>CEC visit with Sales Opportunity where Customer travels via their own ground transportation</description>
    <label>Opportunity Based Drive In</label>
</RecordType>