force-app/main/default/objects/Trip__c/recordTypes/Opportunity_Based_Ground_Transport.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Based_Ground_Transport</fullName>
    <active>true</active>
    <description>CEC visit with Sales Opportunity where ground transportation is provided</description>
    <label>Opportunity Based Ground Transport</label>
</RecordType>