force-app/main/default/objects/Trip__c/recordTypes/Training.recordType-meta.xml
<RecordType>
    <fullName>Training</fullName>
    <active>true</active>
    <description>Scheduled Training in CEC Facilities</description>
    <label>Training</label>
</RecordType>