force-app/main/default/objects/Trip__c/validationRules/Verify_Trip_Request_Status_has_Trip_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Verify_Trip_Request_Status_has_Trip_Date</fullName>
    <active>true</active>
    <description>Verify Trip has a Start and End Date before making Trip Confirmed.</description>
    <errorConditionFormula>AND(
ISBLANK(Trip_Start_Date__c),
ISBLANK(Trip_End_Date__c),
ISPICKVAL( Trip_Request_Status__c ,&quot;Confirmed&quot;))</errorConditionFormula>
    <errorDisplayField>Trip_Start_Date__c</errorDisplayField>
    <errorMessage>FYI: The Trip Start and End Date must be entered before changing the status to Confirmed.</errorMessage>
</ValidationRule>