force-app/main/default/objects/Trip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Trip_Request_Status__c</columns>
    <columns>Trip_Location__c</columns>
    <columns>Trip_Start_Date__c</columns>
    <columns>Trip_End_Date__c</columns>
    <columns>Host_Name_1__c</columns>
    <columns>Host_Cell_Phone_Number__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Primary_Mode_of_Transportation__c</columns>
    <columns>Group_Account__c</columns>
    <columns>Is_Guest_List_Complete__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Opp_Stage__c</columns>
    <columns>PO_Value__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>