force-app/main/default/objects/Trip__c/listViews/CEC_Confirmed.listView-meta.xml
<ListView>
    <fullName>CEC_Confirmed</fullName>
    <columns>CEC_Facilitator__c</columns>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Trip_Request_Status__c</columns>
    <columns>Trip_Location__c</columns>
    <columns>Host_Name_1__c</columns>
    <columns>Host_Cell_Phone_Number__c</columns>
    <columns>Trip_Start_Date__c</columns>
    <columns>Trip_End_Date__c</columns>
    <columns>Help__c</columns>
    <columns>Primary_Mode_of_Transportation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trip_Request_Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </filters>
    <label>CEC Trips Confirmed</label>
    <language>en_US</language>
</ListView>