force-app/main/default/objects/Trip__c/listViews/CEC_Visitation_PLUVIGNER.listView-meta.xml
<ListView>
    <fullName>CEC_Visitation_PLUVIGNER</fullName>
    <columns>Account_Name__c</columns>
    <columns>NAME</columns>
    <columns>Host_Name_1__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CEC_Facilitator__c</columns>
    <columns>Customer_Contact__c</columns>
    <columns>Proposed_Trip_Date__c</columns>
    <columns>Trip_Start_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Number_of_Participants_1__c</columns>
    <columns>Trip_Request_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trip_Location__c</field>
        <operation>equals</operation>
        <value>Pluvigner</value>
    </filters>
    <label>CEC Visitation PLUVIGNER</label>
</ListView>