force-app/main/default/objects/Trip__c/listViews/CWS_Cary_Trips_Submitted.listView-meta.xml
<ListView>
    <fullName>CWS_Cary_Trips_Submitted</fullName>
    <columns>NAME</columns>
    <columns>Trip_Request_Status__c</columns>
    <columns>Trip_Location__c</columns>
    <columns>Trip_Start_Date__c</columns>
    <columns>Trip_End_Date__c</columns>
    <columns>Host_Name_1__c</columns>
    <columns>Host_Cell_Phone_Number__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Primary_Mode_of_Transportation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trip_Request_Status__c</field>
        <operation>equals</operation>
        <value>Submitted,Confirmed,Cancelled</value>
    </filters>
    <filters>
        <field>Trip_Location__c</field>
        <operation>equals</operation>
        <value>Cary,CWS Site</value>
    </filters>
    <label>CWS &amp; Cary Trips Submitted</label>
    <language>en_US</language>
    <sharedTo>
        <group>CEC_Coordinator</group>
        <group>CEC_Specialists</group>
    </sharedTo>
</ListView>