force-app/main/default/objects/Trip__c/listViews/Mississauga_CEC_Trips1.listView-meta.xml
<ListView>
    <fullName>Mississauga_CEC_Trips1</fullName>
    <columns>NAME</columns>
    <columns>Trip_Request_Status__c</columns>
    <columns>Trip_Location__c</columns>
    <columns>Trip_Start_Date__c</columns>
    <columns>Trip_End_Date__c</columns>
    <columns>Host_Name_1__c</columns>
    <columns>Host_Cell_Phone_Number__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Primary_Mode_of_Transportation__c</columns>
    <columns>Group_Account__c</columns>
    <columns>Is_Guest_List_Complete__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Opp_Stage__c</columns>
    <columns>PO_Value__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trip_Location__c</field>
        <operation>equals</operation>
        <value>Mississauga</value>
    </filters>
    <label>Mississauga CEC Trips</label>
</ListView>